no ScSortedRangeCache-based query for number-as-string (tdf#149071)

The comparison depends on the cell encountered, which makes it hard
to prepare the sorted data.

Change-Id: I22f55003acde7eedadb8a4c8d61390dd30b6ac8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134287
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>